tests/baselines/reference/nodePackageSelfName(module=node16).errors.txt
tests/cases/conformance/node/index.cts(2,23): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.


==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    import * as self from "package";
    self;
==== tests/cases/conformance/node/index.mts (0 errors) ====
    // esm format file
    import * as self from "package";
    self;
==== tests/cases/conformance/node/index.cts (1 errors) ====
    // esm format file
    import * as self from "package";
                          ~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.
    self;
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.js"
    }